<resources>
    <string name="app_name">KnowledgeBooster</string>
    <string name="title_activity_sign_in">Sign in</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_acc">Already Have an Account ?</string>
    <string name="new_comer">New to Knowledge Booster ?</string>
    <string name="forget_password">Forget Your Password ?</string>
    <string name="click_here">Click Here</string>

    <!-- Strings related to login -->sign_up
    <string name="prompt_username">Username</string>
    <string name="prompt_email_address">Email Address</string>
    <string name="prompt_password">Password</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="btnAnswered">Answered\n</string>
    <string name="btnFollow">Following\n</string>
    <string name="btnFollower">Follower\n</string>
    <string name="creditAuthor"><u>AuthorNickName</u></string>

    <string name="tagMe">"@"Me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_own_detail">OwnDetailActivity</string>
    <string name="title_activity_question_bottom_navigation">QuestionBottomNavigation</string>
    <string name="title_activity_news_bottom_navigation">NewsBottomNavigation</string>
    <string name="title_activity_other_user_profile">OtherUserProfile</string>

    <!-- Auth UI - Error -->
    <string name="unknown_response">Unexpected onActivityResult response code</string>
    <string name="unknown_sign_in_response">Unknown response from AuthUI sign-in</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">An unknown error occurred</string>
    <!-- Auth UI - Signed in -->
    <string name="signed_in_header">You are signed in!</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account_label">Delete account</string>
    <string name="sign_out_failed">Sign out failed</string>
    <string name="delete_account_failed">Delete account failed</string>
    <string name="title_activity_main">MainActivity</string>

    <!--    Facebook APP String-->
    <string name="facebook_app_id">618592388479447</string>
    <string name="facebook_application_id" translatable="false">618592388479447</string>
    <string name="fb_login_protocol_scheme">fb618592388479447</string>
</resources>
