<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.assignment.knowledgebooster.Login.Register"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorAccent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        android:text="@string/sign_up" />

    <LinearLayout
        android:id="@+id/formRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/textView">

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <EditText
                android:id="@+id/txtUserName"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/prompt_username"
                android:maxLines="1" android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <EditText
                android:id="@+id/txtEmailAddress"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/prompt_email_address"
                android:maxLines="1" android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText android:id="@+id/txtPassword" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/prompt_password"
            android:imeOptions="actionUnspecified" android:inputType="textPassword"
            android:maxLines="1" android:singleLine="true"
            tools:ignore="InvalidImeActionId" />

    </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/formRegister"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/txtView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/have_acc" />

        <Button
            android:id="@+id/btnNavSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/txtView1"
            android:layout_toEndOf="@+id/txtView1"
            android:layout_alignBaseline="@id/txtView1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/sign_in"/>
    </RelativeLayout>
</RelativeLayout>
